# fastapi-starter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
app/: main.py  route.py
app/api/v1/: items.py  todos.py
app/domain/model/todo/: todo.py  todo_repository.py
app/gateway/: db.py
app/injector/: todo_injector.py
app/usecase/: base.py
app/usecase/todo/: todo_get_usecase.py
docker/mysql/initdb.d/: 01_database.sql  02_schema.sql  03_data.sql
