[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["8zca <excref@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.3"
SQLAlchemy = "^1.4.11"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
