[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["8zca <excref@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mysqlclient = "^2.0.3"
SQLAlchemy = "^1.4.11"
click = "^7.1.2"
fastapi = "^0.63.0"
dependency-injector = "^4.32.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.1"
mypy = "^0.812"
black = "^21.4b2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
